syntax = "proto3";

package polykey.v1.keys;

message Crypto {
  string data = 1;
  string signature = 2;
  string public_key_jwk = 3;
}

message Key {
  string name = 1;
  string key = 2;
}

message KeyPair {
  string public = 1;
  string private = 2;
}

message Certificate {
  string cert = 1;
}
